@@ -1,6 +1,6 @@
 == Version 2.10 ==
 
-7 Aug 2010
+18 Aug 2010
 
 * Handle properly GNU libc [=open](2), [=open64](2), [=openat](2) and
   [=openat64](2) inline functions.
@@ -12,6 +12,7 @@
   small.
 * Fixed [=undefined symbol: rpl_malloc] error for compiled 32-bit library on
   64-bit architecture by dropping AC_FUNC_MALLOC in configure.ac.
+* New function [=popen(2)] for GNU libc.
 * New FAKECHROOT_CMD_SUBST environment variable handles a list of substituted
   commands.  Thanks to Richard W.M. Jones.
 
